# ArtemisThermalBase

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: default_config.yaml
core_engine/: __init__.py  constants.py  illumination.py  mesh.py  raytracer.py  solar_disk.py
data_ingestion/: __init__.py  ephemeris.py  lola_loader.py  polar_stereographic.py  synthetic_dem.py
docs/: API_REFERENCE.md  ASSUMPTIONS_AND_LIMITATIONS.md  CONFIGURATION.md  PHYSICS_MODEL.md
simulation/: __init__.py  io_manager.py  runner.py
tests/: __init__.py  conftest.py  test_phase_d.py  test_raytracer.py  test_thermal_solver.py
thermal_solver/: __init__.py  crank_nicolson.py  regolith_properties.py
tools/: download_sample_data.py
validation/: __init__.py
visualization/: __init__.py  hero_renderer.py  plotter.py
